Add BESIII talk with TensorWaves 0.3.4
Can be used for performance comparisons with 0.3.7

--- a/2021.11.29/tensorwaves-0.3.4.ipynb
+++ b/2021.11.29/tensorwaves-0.3.4.ipynb
@@ -37,7 +37,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install -q ampform[viz]==0.11.* tensorwaves[jax]==0.3.7"
+    "!pip install -q ampform[viz]==0.11.* tensorwaves[jax]==0.3.4 tensorflow==2.7.*"
    ]
   },
   {
@@ -260,6 +260,7 @@
     "template = SympyModel(\n",
     "    expression=model.expression.doit(),\n",
     "    parameters=model.parameter_defaults,\n",
+    "    max_complexity=200,\n",
     ")\n",
     "intensity = LambdifiedFunction(template, backend=\"jax\")\n",
     "data_converter = HelicityTransformer(model.adapter)\n",
@@ -348,7 +349,7 @@
    "metadata": {},
    "source": [
     "_Time estimate:_<br>\n",
-    "For this (deterministic) data sample and these initial parameter values, the fit requires **516 iterations**. On Google Colab, this should take **around 20 seconds** with GPU."
+    "For this (deterministic) data sample and these initial parameter values, the fit requires **516 iterations**. On Google Colab, this should take **around 45 seconds** with GPU."
    ]
   },
   {
