Switch to pip install with percentage
https://code.visualstudio.com/updates/v1_63#_jupyter

--- a/2021.11.29/ampform.ipynb
+++ b/2021.11.29/ampform.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -q ampform[viz]==0.11.*"
+    "%pip install -q ampform[viz]==0.11.*"
    ]
   },
   {
@@ -49,6 +49,8 @@
    },
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload\n",
     "import ampform\n",
     "import graphviz\n",
     "import qrules\n",
