--- a/2021.11.29/qrules.ipynb
+++ b/2021.11.29/qrules.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -q qrules[viz]==0.9.*"
+    "%pip install -q qrules[viz]==0.9.*"
    ]
   },
   {
@@ -37,6 +37,8 @@
    },
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload\n",
     "import graphviz\n",
     "import qrules"
    ]
