--- a/2021.11.29/tensorwaves-0.3.4.ipynb
+++ b/2021.11.29/tensorwaves-0.3.4.ipynb
@@ -37,7 +37,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install -q ampform[viz]==0.11.* tensorwaves[jax]==0.3.4 tensorflow==2.7.*"
+    "%pip install -q ampform[viz]==0.11.* tensorwaves[jax]==0.3.4 tensorflow==2.7.*"
    ]
   },
   {
@@ -51,6 +51,8 @@
    },
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload\n",
     "import logging\n",
     "import re\n",
     "import warnings\n",
