--- a/2021.11.29/tensorwaves-0.3.4.ipynb
+++ b/2021.11.29/tensorwaves-0.3.4.ipynb
@@ -53,6 +53,7 @@
    "source": [
     "%load_ext autoreload\n",
     "%autoreload\n",
+    "%config InlineBackend.figure_formats = ['svg']\n",
     "import logging\n",
     "import re\n",
     "import warnings\n",
