Print fit result execution time
The execution time shown by the tqdm bar is not accurate sometimes.

--- a/2021.11.29/tensorwaves.ipynb
+++ b/2021.11.29/tensorwaves.ipynb
@@ -342,8 +342,9 @@
    "source": [
     "function = LambdifiedFunction(template, backend=\"jax\")\n",
     "estimator = UnbinnedNLL(function, data, phsp, backend=\"jax\")\n",
-    "minuit2 = Minuit2(callback=CSVSummary(\"fit_traceback.csv\"))\n",
-    "fit_result = minuit2.optimize(estimator, initial_parameters)"
+    "optimizer = Minuit2(callback=CSVSummary(\"fit_traceback.csv\"))\n",
+    "fit_result = optimizer.optimize(estimator, initial_parameters)\n",
+    "fit_result.execution_time"
    ]
   },
   {
@@ -351,7 +352,7 @@
    "metadata": {},
    "source": [
     "_Time estimate:_<br>\n",
-    "For this (deterministic) data sample and these initial parameter values, the fit requires **516 iterations**. On Google Colab, this should take **around 20 seconds** with GPU."
+    "For this (deterministic) data sample and these initial parameter values, the fit requires **515 iterations** (GPU; 516 on CPU). On Google Colab, this should take **around 20 seconds** with GPU."
    ]
   },
   {
