--- a/2021.12.13/tensorwaves.ipynb
+++ b/2021.12.13/tensorwaves.ipynb
@@ -348,8 +348,9 @@
     "    expression, parameter_defaults, backend=\"jax\"\n",
     ")\n",
     "estimator = UnbinnedNLL(function, data, phsp, backend=\"jax\")\n",
-    "minuit2 = Minuit2(callback=CSVSummary(\"fit_traceback.csv\"))\n",
-    "fit_result = minuit2.optimize(estimator, initial_parameters)"
+    "optimizer = Minuit2(callback=CSVSummary(\"fit_traceback.csv\"))\n",
+    "fit_result = optimizer.optimize(estimator, initial_parameters)\n",
+    "fit_result.execution_time"
    ]
   },
   {
@@ -357,7 +358,7 @@
    "metadata": {},
    "source": [
     "_Time estimate:_<br>\n",
-    "For this (deterministic) data sample and these initial parameter values, the fit requires **516 iterations**. On Google Colab, this should take **around 45 seconds** with GPU."
+    "For this (deterministic) data sample and these initial parameter values, the fit requires **515 iterations** (GPU; 516 on CPU). On Google Colab, this should take **around 20 seconds** with GPU."
    ]
   },
   {
