Cast data to numpy before plotting
JAX v0.2.26 causes matplotlib to freeze when plotting a histogram

--- a/2021.11.29/tensorwaves.ipynb
+++ b/2021.11.29/tensorwaves.ipynb
@@ -135,19 +135,19 @@
     "    intensity_model,\n",
     "    bins=100,\n",
     "):\n",
-    "    data = data_set[variable_name]\n",
-    "    phsp = phsp_set[variable_name]\n",
-    "    intensities = intensity_model(phsp_set)\n",
-    "    fig, ax = plt.subplots(figsize=(9, 4))\n",
-    "    axis = plt.gca()\n",
-    "    axis.hist(\n",
+    "    data = np.array(data_set[variable_name])\n",
+    "    phsp = np.array(phsp_set[variable_name])\n",
+    "    intensities = np.array(intensity_model(phsp_set))\n",
+    "    _, ax = plt.subplots(figsize=(9, 4))\n",
+    "    ax = plt.gca()\n",
+    "    ax.hist(\n",
     "        data,\n",
     "        bins=bins,\n",
     "        alpha=0.5,\n",
     "        label=\"data\",\n",
     "        density=True,\n",
     "    )\n",
-    "    axis.hist(\n",
+    "    ax.hist(\n",
     "        phsp,\n",
     "        weights=intensities,\n",
     "        bins=bins,\n",
@@ -157,7 +157,7 @@
     "        density=True,\n",
     "    )\n",
     "    indicate_masses()\n",
-    "    plt.legend()\n",
+    "    ax.legend()\n",
     "\n",
     "\n",
     "def natural_sorting(text):\n",
@@ -300,8 +300,12 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
-    "ax.hist(data[\"m_12\"], density=True, bins=100, alpha=0.5, label=\"data\")\n",
-    "ax.hist(phsp[\"m_12\"], density=True, bins=100, alpha=0.5, label=\"phsp\")\n",
+    "ax.hist(\n",
+    "    np.array(data[\"m_12\"]), density=True, bins=100, alpha=0.5, label=\"data\"\n",
+    ")\n",
+    "ax.hist(\n",
+    "    np.array(phsp[\"m_12\"]), density=True, bins=100, alpha=0.5, label=\"phsp\"\n",
+    ")\n",
     "ax.set_xlabel(R\"$m_{\\pi^0\\pi^0}$\")\n",
     "ax.set_yticks([])\n",
     "plt.legend();"
