--- a/2021.12.13/tensorwaves.ipynb
+++ b/2021.12.13/tensorwaves.ipynb
@@ -135,9 +135,9 @@
     "    intensity_model,\n",
     "    bins=100,\n",
     "):\n",
-    "    data = data_set[variable_name]\n",
-    "    phsp = phsp_set[variable_name]\n",
-    "    intensities = intensity_model(phsp_set)\n",
+    "    data = np.array(data_set[variable_name])\n",
+    "    phsp = np.array(phsp_set[variable_name])\n",
+    "    intensities = np.array(intensity_model(phsp_set))\n",
     "    _, ax = plt.subplots(figsize=(10, 3.5))\n",
     "    ax.hist(\n",
     "        data,\n",
@@ -302,8 +302,12 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
-    "ax.hist(data[\"m_12\"], density=True, bins=100, alpha=0.5, label=\"data\")\n",
-    "ax.hist(phsp[\"m_12\"], density=True, bins=100, alpha=0.5, label=\"phsp\")\n",
+    "ax.hist(\n",
+    "    np.array(data[\"m_12\"]), density=True, bins=100, alpha=0.5, label=\"data\"\n",
+    ")\n",
+    "ax.hist(\n",
+    "    np.array(phsp[\"m_12\"]), density=True, bins=100, alpha=0.5, label=\"phsp\"\n",
+    ")\n",
     "ax.set_xlabel(R\"$m_{\\pi^0\\pi^0}$\")\n",
     "ax.set_yticks([])\n",
     "plt.legend()\n",
