Add demo with optimized expression
Fixed parameters and stable masses are substituted in the amplitude
model, which reduces fit time by about 30%

--- a/2021.12.13/tensorwaves-optimized-expression.ipynb
+++ b/2021.12.13/tensorwaves-optimized-expression.ipynb
@@ -13,6 +13,8 @@
    "source": [
     "This notebook accompanies [these slides](https://docs.google.com/presentation/d/e/2PACX-1vSymz5AjdhPw4Kz1pKhdFMnFGYuQvVaC8WbV_HTg770x6RDYoP-Anv9tn88DSuzvSiiQ9F4pcDGVExv/pub). They were presented during a PANDA Seminar on 13 December 2021.\n",
     "\n",
+    "_This notebook is based on [`tensorwaves.ipynb`](./tensorwaves.ipynb). It demonstrates speed up the fit by simplifying the amplitude model expression with SymPy._\n",
+    "\n",
     "Related notebooks for this presentation:\n",
     "- [QRules demo](./qrules.ipynb)\n",
     "- [AmpForm demo](./ampform.ipynb)\n",
@@ -322,6 +324,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the following, we give a few of the parameters in the amplitude model a little offset from the original values suggested by AmpForm. These parameters will later be optimized with regard to the generated data sample. The model with offset parameters looks like this:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -346,9 +355,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that we first run the function on a single event. This is to JIT-compile the JAX functions, so that we get the raw performance numbers on the actual optimization process.\n",
-    "\n",
-    "_For an optimized version of the fit, see [`tensorwaves-optimized-expression.ipynb`](./tensorwaves-optimized-expression.ipynb)._"
+    "Having decided which parameters are to be optimized, we can apply some additional optimizations to the amplitude model expression, so that the computations during the fit are faster. The first of these optimizations is to substitute the parameters that remain fixed with their suggested parameter values. Note how this decreases the number of operations (nodes) in the expression tree:"
    ]
   },
   {
@@ -357,11 +364,156 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "function = create_parametrized_function(\n",
+    "sp.count_ops(expression)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fixed_parameters = {\n",
+    "    p: v\n",
+    "    for p, v in model.parameter_defaults.items()\n",
+    "    if p.name not in initial_parameters\n",
+    "}\n",
+    "optimized_expression = expression.subs(fixed_parameters)\n",
+    "sp.count_ops(optimized_expression)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In addition, we can substitute the final state masses $m_0, m_1, m_2$ with scalar values, as the final states in this decay channel are stable. SymPy will then further simply the expression, so that the computation is less complex."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimized_expression = optimized_expression.subs(\n",
+    "    {\n",
+    "        sp.Symbol(f\"m_{i}\", real=True): particle.mass\n",
+    "        for i, particle in reaction.final_state.items()\n",
+    "    }\n",
+    ")\n",
+    "sp.count_ops(optimized_expression)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that there are a few irrational numbers (square roots) in the expression as well, for example in this amplitude:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimized_expression.args[0].args[0].args[0].args[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When we substitute these values, the expression tree becomes even smaller."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for node in sp.preorder_traversal(optimized_expression):\n",
+    "    if node.free_symbols:\n",
+    "        continue\n",
+    "    if isinstance(node, sp.Pow):\n",
+    "        optimized_expression = optimized_expression.xreplace({node: node.n()})\n",
+    "sp.count_ops(optimized_expression)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Also note that SymPy has rendered $\\sqrt{m_{12}^2}$ in each Breit-Wigner as $|m_{12}|$. This can be substituted as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m_12 = sp.Symbol(\"m_12\", real=True)\n",
+    "optimized_expression = optimized_expression.subs({sp.Abs(m_12): m_12})\n",
+    "sp.count_ops(optimized_expression)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, note that some of the computed kinematic variable arrays are complex-valued. This can be useful in come cases, but in this decay channel, all kinematic variable values lie on the real axis. The fit can therefore be further optimized by casting the data arrays to real values:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_real = {var: array.real for var, array in data.items()}\n",
+    "phsp_real = {var: array.real for var, array in phsp.items()}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Further optimizations, such as identifying [common sub-expressions](https://github.com/ComPWA/tensorwaves/pull/374), are performed when the expression is expressed as a function in the computational backend. The effect of all optimization is illustrated below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "slow_function = create_parametrized_function(\n",
     "    expression, parameter_defaults, backend=\"jax\"\n",
     ")\n",
-    "function({k: v[0] for k, v in data.items()})  # JIT-compile function\n",
-    "estimator = UnbinnedNLL(function, data, phsp, backend=\"jax\")\n",
+    "optimized_function = create_parametrized_function(\n",
+    "    optimized_expression, parameter_defaults, backend=\"jax\"\n",
+    ")\n",
+    "slow_function({k: v[0] for k, v in data.items()})  # JIT-compile function\n",
+    "optimized_function({k: v[0] for k, v in data.items()})  # JIT-compile function\n",
+    "%timeit slow_function(data)\n",
+    "%timeit optimized_function(data_real)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "estimator = UnbinnedNLL(\n",
+    "    optimized_function, data_real, phsp_real, backend=\"jax\"\n",
+    ")\n",
     "optimizer = Minuit2(callback=CSVSummary(\"fit_traceback.csv\"))\n",
     "fit_result = optimizer.optimize(estimator, initial_parameters)\n",
     "fit_result.execution_time"
@@ -372,7 +524,7 @@
    "metadata": {},
    "source": [
     "_Time estimate:_<br>\n",
-    "For this (deterministic) data sample and these initial parameter values, the fit requires **515 iterations** (GPU; 516 on CPU). On Google Colab, this should take **around 20 seconds** with GPU."
+    "For this (deterministic) data sample and these initial parameter values, the fit requires **515 iterations** (GPU; 516 on CPU). On Google Colab, this should take **around 15 seconds** with GPU."
    ]
   },
   {
@@ -386,8 +538,8 @@
    },
    "outputs": [],
    "source": [
-    "function.update_parameters(fit_result.parameter_values)\n",
-    "compare_model(\"m_12\", data, phsp, function, bins=200)"
+    "optimized_function.update_parameters(fit_result.parameter_values)\n",
+    "compare_model(\"m_12\", data, phsp, optimized_function, bins=200)"
    ]
   },
   {
