--- a/2021.12.13/qrules.ipynb
+++ b/2021.12.13/qrules.ipynb
@@ -130,7 +130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The visualization above is just a simplified rendering: the [`ReactionInfo`](https://qrules.readthedocs.io/en/0.9.x/api/qrules.transition.html#qrules.transition.ReactionInfo) object contains all information that is needed to formulate an amplitude model, like angular momenta, coupled spin, particle masses, widths and spin projections (helicity). See the [AmpForm demo](https://colab.research.google.com/drive/18-_mZAFe-rRJli3EgntX6N1PHXlwdF2s?usp=sharing)."
+    "The visualization above is just a simplified rendering: the [`ReactionInfo`](https://qrules.readthedocs.io/en/0.9.x/api/qrules.transition.html#qrules.transition.ReactionInfo) object contains all information that is needed to formulate an amplitude model, like angular momenta, coupled spin, particle masses, widths and spin projections (helicity). See the [AmpForm demo](./ampform.ipynb)."
    ]
   },
   {
