--- a/2021.12.13/tensorwaves-optimized-expression.ipynb
+++ b/2021.12.13/tensorwaves-optimized-expression.ipynb
@@ -188,7 +188,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Generate allowed transitions for $J/\\psi \\to \\gamma f_0, f_0 \\to \\pi^0 \\pi^0$ with QRules (see [QRules demo](https://colab.research.google.com/drive/1E6PndrBg-1n2XGoz0ivb-4Otx2BsTGD3?usp=sharing)):"
+    "Generate allowed transitions for $J/\\psi \\to \\gamma f_0, f_0 \\to \\pi^0 \\pi^0$ with QRules (see [QRules demo](./qrules.ipynb)):"
    ]
   },
   {
@@ -224,7 +224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Express the transitions as an amplitude model with the resonances parametrized as a relativistic Breit-Wigner with form factor (see [AmpForm demo](https://colab.research.google.com/drive/18-_mZAFe-rRJli3EgntX6N1PHXlwdF2s?usp=sharing)):"
+    "Express the transitions as an amplitude model with the resonances parametrized as a relativistic Breit-Wigner with form factor (see [AmpForm demo](./ampform.ipynb)):"
    ]
   },
   {
@@ -482,7 +482,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Further optimizations, such as identifying [common sub-expressions](https://github.com/ComPWA/tensorwaves/pull/374), are performed when the expression is expressed as a function in the computational backend. The effect of all optimization is illustrated below."
+    "Further optimizations, such as identifying [common sub-expressions](https://github.com/ComPWA/tensorwaves/pull/374), are performed when the expression is expressed as a function in the computational backend. The effect of all optimization is illustrated below.\n",
+    "\n",
+    "_See [`tensorwaves-caching.ipynb`](./tensorwaves-caching.ipynb) for an additional step: caching sub-trees that are independent of free parameters._"
    ]
   },
   {
