--- a/2021.12.13/tensorwaves-caching.ipynb
+++ b/2021.12.13/tensorwaves-caching.ipynb
@@ -39,7 +39,7 @@
    },
    "outputs": [],
    "source": [
-    "%pip install -q ampform[viz]==0.12.* git+https://github.com/ComPWA/tensorwaves@main jax jaxlib"
+    "%pip install -q ampform[viz]==0.12.* tensorwaves[jax,pwa]==0.4.*"
    ]
   },
   {
@@ -74,9 +74,10 @@
     "from matplotlib import cm\n",
     "from tensorflow.python.ops.numpy_ops import np_config\n",
     "from tensorwaves.data import (\n",
+    "    IntensityDistributionGenerator,\n",
+    "    TFPhaseSpaceGenerator,\n",
     "    TFUniformRealNumberGenerator,\n",
-    "    generate_data,\n",
-    "    generate_phsp,\n",
+    "    TFWeightedPhaseSpaceGenerator,\n",
     ")\n",
     "from tensorwaves.data.transform import SympyDataTransformer\n",
     "from tensorwaves.estimator import UnbinnedNLL\n",
@@ -268,29 +269,27 @@
     "intensity = create_parametrized_function(\n",
     "    expression, parameter_defaults, backend=\"jax\"\n",
     ")\n",
-    "data_converter = SympyDataTransformer.from_sympy(\n",
+    "helicity_transformer = SympyDataTransformer.from_sympy(\n",
     "    model.kinematic_variables, backend=\"jax\"\n",
     ")\n",
     "reaction_info = model.reaction_info\n",
     "initial_state_mass = reaction_info.initial_state[-1].mass\n",
     "final_state_masses = {i: p.mass for i, p in reaction_info.final_state.items()}\n",
     "rng = TFUniformRealNumberGenerator(seed=0)\n",
-    "phsp_sample = generate_phsp(\n",
-    "    size=1_000_000,\n",
-    "    initial_state_mass=initial_state_mass,\n",
-    "    final_state_masses=final_state_masses,\n",
-    "    random_generator=rng,\n",
+    "\n",
+    "phsp_generator = TFPhaseSpaceGenerator(initial_state_mass, final_state_masses)\n",
+    "phsp_momenta = phsp_generator.generate(1_000_000, rng)\n",
+    "phsp = helicity_transformer(phsp_momenta)\n",
+    "\n",
+    "data_generator = IntensityDistributionGenerator(\n",
+    "    function=intensity,\n",
+    "    domain_generator=TFWeightedPhaseSpaceGenerator(\n",
+    "        initial_state_mass, final_state_masses\n",
+    "    ),\n",
+    "    domain_transformer=helicity_transformer,\n",
     ")\n",
-    "data_sample = generate_data(\n",
-    "    size=100_000,\n",
-    "    initial_state_mass=initial_state_mass,\n",
-    "    final_state_masses=final_state_masses,\n",
-    "    data_transformer=data_converter,\n",
-    "    intensity=intensity,\n",
-    "    random_generator=rng,\n",
-    ")\n",
-    "data = data_converter(data_sample)\n",
-    "phsp = data_converter(phsp_sample)"
+    "data_momenta = data_generator.generate(100_000, rng)\n",
+    "data = helicity_transformer(data_momenta)"
    ]
   },
   {
@@ -648,13 +647,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimizer = Minuit2(callback=CSVSummary(\"fit_traceback.csv\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
     "estimator = UnbinnedNLL(function, data, phsp, backend=\"jax\")\n",
-    "optimizer = Minuit2(callback=CSVSummary(\"fit_traceback.csv\"))\n",
     "fit_result = optimizer.optimize(estimator, initial_parameters)\n",
     "fit_result.execution_time"
    ]
@@ -670,7 +677,6 @@
     "estimator = UnbinnedNLL(\n",
     "    optimized_function, data_real, phsp_real, backend=\"jax\"\n",
     ")\n",
-    "optimizer = Minuit2(callback=CSVSummary(\"fit_traceback.csv\"))\n",
     "fit_result = optimizer.optimize(estimator, initial_parameters)\n",
     "fit_result.execution_time"
    ]
@@ -694,7 +700,6 @@
     "estimator = UnbinnedNLL(\n",
     "    cached_function, cached_data, cached_phsp, backend=\"jax\"\n",
     ")\n",
-    "optimizer = Minuit2(callback=CSVSummary(\"fit_traceback.csv\"))\n",
     "fit_result = optimizer.optimize(estimator, initial_parameters)\n",
     "fit_result.execution_time"
    ]
