MAINT: use `black`'s default line width 88

--- a/2021.11.29/tensorwaves-0.3.4.ipynb
+++ b/2021.11.29/tensorwaves-0.3.4.ipynb
@@ -70,11 +70,7 @@
     "from jax.lib import xla_bridge\n",
     "from matplotlib import cm\n",
     "from tensorflow.python.ops.numpy_ops import np_config\n",
-    "from tensorwaves.data import (\n",
-    "    TFUniformRealNumberGenerator,\n",
-    "    generate_data,\n",
-    "    generate_phsp,\n",
-    ")\n",
+    "from tensorwaves.data import TFUniformRealNumberGenerator, generate_data, generate_phsp\n",
     "from tensorwaves.data.transform import HelicityTransformer\n",
     "from tensorwaves.estimator import UnbinnedNLL\n",
     "from tensorwaves.model import LambdifiedFunction, SympyModel\n",
@@ -123,9 +119,7 @@
     "    colors = [cm.rainbow(x) for x in evenly_spaced_interval]\n",
     "    plt.xlabel(\"$m$ [GeV]\")\n",
     "    for i, p in enumerate(resonances):\n",
-    "        plt.gca().axvline(\n",
-    "            x=p.mass, linestyle=\"dotted\", label=p.name, color=colors[i]\n",
-    "        )\n",
+    "        plt.gca().axvline(x=p.mass, linestyle=\"dotted\", label=p.name, color=colors[i])\n",
     "\n",
     "\n",
     "def compare_model(\n",
@@ -300,12 +294,8 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
-    "ax.hist(\n",
-    "    np.array(data[\"m_12\"]), density=True, bins=100, alpha=0.5, label=\"data\"\n",
-    ")\n",
-    "ax.hist(\n",
-    "    np.array(phsp[\"m_12\"]), density=True, bins=100, alpha=0.5, label=\"phsp\"\n",
-    ")\n",
+    "ax.hist(np.array(data[\"m_12\"]), density=True, bins=100, alpha=0.5, label=\"data\")\n",
+    "ax.hist(np.array(phsp[\"m_12\"]), density=True, bins=100, alpha=0.5, label=\"phsp\")\n",
     "ax.set_xlabel(R\"$m_{\\pi^0\\pi^0}$\")\n",
     "ax.set_yticks([])\n",
     "plt.legend();"
