--- a/2021.12.13/ampform.ipynb
+++ b/2021.12.13/ampform.ipynb
@@ -64,10 +64,7 @@
     "    create_analytic_breit_wigner,\n",
     "    create_relativistic_breit_wigner_with_ff,\n",
     ")\n",
-    "from ampform.dynamics.kmatrix import (\n",
-    "    NonRelativisticKMatrix,\n",
-    "    RelativisticKMatrix,\n",
-    ")\n",
+    "from ampform.dynamics.kmatrix import NonRelativisticKMatrix, RelativisticKMatrix\n",
     "from ampform.sympy import UnevaluatedExpression\n",
     "from IPython.display import Math, display\n",
     "from ipywidgets import Checkbox, SelectionSlider, SelectMultiple, ToggleButtons\n",
@@ -148,9 +145,7 @@
    },
    "outputs": [],
    "source": [
-    "dot = qrules.io.asdot(\n",
-    "    reaction, collapse_graphs=True, render_final_state_id=True\n",
-    ")\n",
+    "dot = qrules.io.asdot(reaction, collapse_graphs=True, render_final_state_id=True)\n",
     "graphviz.Source(dot)"
    ]
   },
@@ -247,8 +242,7 @@
     "A_step2 = symplot.partial_doit(A_step1, (BlattWeisskopfSquared, WignerD))\n",
     "A_step2 = symplot.partial_doit(A_step2, EnergyDependentWidth)\n",
     "mass_substitutions = {\n",
-    "    sp.Symbol(f\"m_{i}\", real=True): p.mass\n",
-    "    for i, p in reaction.final_state.items()\n",
+    "    sp.Symbol(f\"m_{i}\", real=True): p.mass for i, p in reaction.final_state.items()\n",
     "}\n",
     "substitutions = {\n",
     "    sp.sqrt(2): sp.sqrt(2).n(),\n",
@@ -452,9 +446,7 @@
    },
    "outputs": [],
    "source": [
-    "mass_symbols = {\n",
-    "    s: Symbol(s.name, **s.assumptions0) for s in mass_substitutions\n",
-    "}\n",
+    "mass_symbols = {s: Symbol(s.name, **s.assumptions0) for s in mass_substitutions}\n",
     "colored_symbols = {\n",
     "    s: sp.Symbol(Rf\"\\color{{RoyalBlue}}{{{s.name}}}\", **s.assumptions0)\n",
     "    for s in mass_substitutions\n",
@@ -477,9 +469,7 @@
    "source": [
     "expr_subs = expr.subs(mass_substitutions)\n",
     "expr_subs = round_nested(expr_subs, n_decimals=2)\n",
-    "node = [\n",
-    "    s for s in sp.preorder_traversal(expr_subs) if isinstance(s, sp.Float)\n",
-    "][0]\n",
+    "node = [s for s in sp.preorder_traversal(expr_subs) if isinstance(s, sp.Float)][0]\n",
     "dot = sp.dotprint(expr_subs.subs(node, Symbol(f\"{node}\")), **graph_style)\n",
     "display(expr_subs.subs(node, sp.Symbol(Rf\"\\color{{RoyalBlue}}{node}\")))\n",
     "graphviz.Source(dot)"
