--- a/2021.12.13/tensorwaves-caching.ipynb
+++ b/2021.12.13/tensorwaves-caching.ipynb
@@ -127,9 +127,7 @@
     "    colors = [cm.rainbow(x) for x in evenly_spaced_interval]\n",
     "    plt.xlabel(\"$m$ [GeV]\")\n",
     "    for i, p in enumerate(resonances):\n",
-    "        plt.gca().axvline(\n",
-    "            x=p.mass, linestyle=\"dotted\", label=p.name, color=colors[i]\n",
-    "        )\n",
+    "        plt.gca().axvline(x=p.mass, linestyle=\"dotted\", label=p.name, color=colors[i])\n",
     "\n",
     "\n",
     "def compare_model(\n",
@@ -266,9 +264,7 @@
    "source": [
     "expression = model.expression.doit()\n",
     "parameter_defaults = model.parameter_defaults\n",
-    "intensity = create_parametrized_function(\n",
-    "    expression, parameter_defaults, backend=\"jax\"\n",
-    ")\n",
+    "intensity = create_parametrized_function(expression, parameter_defaults, backend=\"jax\")\n",
     "helicity_transformer = SympyDataTransformer.from_sympy(\n",
     "    model.kinematic_variables, backend=\"jax\"\n",
     ")\n",
@@ -304,12 +300,8 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
-    "ax.hist(\n",
-    "    np.array(data[\"m_12\"]), density=True, bins=100, alpha=0.5, label=\"data\"\n",
-    ")\n",
-    "ax.hist(\n",
-    "    np.array(phsp[\"m_12\"]), density=True, bins=100, alpha=0.5, label=\"phsp\"\n",
-    ")\n",
+    "ax.hist(np.array(data[\"m_12\"]), density=True, bins=100, alpha=0.5, label=\"data\")\n",
+    "ax.hist(np.array(phsp[\"m_12\"]), density=True, bins=100, alpha=0.5, label=\"phsp\")\n",
     "ax.set_xlabel(R\"$m_{\\pi^0\\pi^0}$\")\n",
     "ax.set_yticks([])\n",
     "plt.legend()\n",
@@ -382,13 +374,9 @@
    },
    "outputs": [],
    "source": [
-    "free_parameters = {\n",
-    "    p for p in model.parameter_defaults if p.name in initial_parameters\n",
-    "}\n",
+    "free_parameters = {p for p in model.parameter_defaults if p.name in initial_parameters}\n",
     "fixed_parameters = {\n",
-    "    p: v\n",
-    "    for p, v in model.parameter_defaults.items()\n",
-    "    if p not in free_parameters\n",
+    "    p: v for p, v in model.parameter_defaults.items() if p not in free_parameters\n",
     "}\n",
     "optimized_expression = expression.subs(fixed_parameters)\n",
     "sp.count_ops(optimized_expression)"
@@ -509,12 +497,9 @@
     "    cached_expression = cached_expressions[0]\n",
     "    cse_dict = dict(cse)\n",
     "    cse_symbols = set(cse_dict)\n",
-    "    while any(\n",
-    "        [bool(expr.free_symbols & cse_symbols) for expr in cse_dict.values()]\n",
-    "    ):\n",
+    "    while any([bool(expr.free_symbols & cse_symbols) for expr in cse_dict.values()]):\n",
     "        cse_dict = {\n",
-    "            symbol: expr.xreplace(cse_dict)\n",
-    "            for symbol, expr in cse_dict.items()\n",
+    "            symbol: expr.xreplace(cse_dict) for symbol, expr in cse_dict.items()\n",
     "        }\n",
     "    cse_dict = {\n",
     "        symbol: expr\n",
@@ -564,9 +549,7 @@
    },
    "outputs": [],
    "source": [
-    "dot = sp.dotprint(\n",
-    "    optimized_expression.args[0].args[0].args[0].args[0], size=10\n",
-    ")\n",
+    "dot = sp.dotprint(optimized_expression.args[0].args[0].args[0].args[0], size=10)\n",
     "graphviz.Source(dot)"
    ]
   },
@@ -629,9 +612,7 @@
    "outputs": [],
    "source": [
     "# Express expressions in backend\n",
-    "function = create_parametrized_function(\n",
-    "    expression, parameter_defaults, backend=\"jax\"\n",
-    ")\n",
+    "function = create_parametrized_function(expression, parameter_defaults, backend=\"jax\")\n",
     "optimized_function = create_parametrized_function(\n",
     "    optimized_expression, parameter_defaults, backend=\"jax\"\n",
     ")\n",
@@ -674,9 +655,7 @@
    },
    "outputs": [],
    "source": [
-    "estimator = UnbinnedNLL(\n",
-    "    optimized_function, data_real, phsp_real, backend=\"jax\"\n",
-    ")\n",
+    "estimator = UnbinnedNLL(optimized_function, data_real, phsp_real, backend=\"jax\")\n",
     "fit_result = optimizer.optimize(estimator, initial_parameters)\n",
     "fit_result.execution_time"
    ]
@@ -697,9 +676,7 @@
    },
    "outputs": [],
    "source": [
-    "estimator = UnbinnedNLL(\n",
-    "    cached_function, cached_data, cached_phsp, backend=\"jax\"\n",
-    ")\n",
+    "estimator = UnbinnedNLL(cached_function, cached_data, cached_phsp, backend=\"jax\")\n",
     "fit_result = optimizer.optimize(estimator, initial_parameters)\n",
     "fit_result.execution_time"
    ]
