--- a/2021.12.13/tensorwaves.ipynb
+++ b/2021.12.13/tensorwaves.ipynb
@@ -124,9 +124,7 @@
     "    colors = [cm.rainbow(x) for x in evenly_spaced_interval]\n",
     "    plt.xlabel(\"$m$ [GeV]\")\n",
     "    for i, p in enumerate(resonances):\n",
-    "        plt.gca().axvline(\n",
-    "            x=p.mass, linestyle=\"dotted\", label=p.name, color=colors[i]\n",
-    "        )\n",
+    "        plt.gca().axvline(x=p.mass, linestyle=\"dotted\", label=p.name, color=colors[i])\n",
     "\n",
     "\n",
     "def compare_model(\n",
@@ -263,9 +261,7 @@
    "source": [
     "expression = model.expression.doit()\n",
     "parameter_defaults = model.parameter_defaults\n",
-    "intensity = create_parametrized_function(\n",
-    "    expression, parameter_defaults, backend=\"jax\"\n",
-    ")\n",
+    "intensity = create_parametrized_function(expression, parameter_defaults, backend=\"jax\")\n",
     "helicity_transformer = SympyDataTransformer.from_sympy(\n",
     "    model.kinematic_variables, backend=\"jax\"\n",
     ")\n",
@@ -301,12 +297,8 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
-    "ax.hist(\n",
-    "    np.array(data[\"m_12\"]), density=True, bins=100, alpha=0.5, label=\"data\"\n",
-    ")\n",
-    "ax.hist(\n",
-    "    np.array(phsp[\"m_12\"]), density=True, bins=100, alpha=0.5, label=\"phsp\"\n",
-    ")\n",
+    "ax.hist(np.array(data[\"m_12\"]), density=True, bins=100, alpha=0.5, label=\"data\")\n",
+    "ax.hist(np.array(phsp[\"m_12\"]), density=True, bins=100, alpha=0.5, label=\"phsp\")\n",
     "ax.set_xlabel(R\"$m_{\\pi^0\\pi^0}$\")\n",
     "ax.set_yticks([])\n",
     "plt.legend()\n",
@@ -358,9 +350,7 @@
    },
    "outputs": [],
    "source": [
-    "function = create_parametrized_function(\n",
-    "    expression, parameter_defaults, backend=\"jax\"\n",
-    ")\n",
+    "function = create_parametrized_function(expression, parameter_defaults, backend=\"jax\")\n",
     "function({k: v[0] for k, v in data.items()})  # JIT-compile function\n",
     "estimator = UnbinnedNLL(function, data, phsp, backend=\"jax\")\n",
     "optimizer = Minuit2(callback=CSVSummary(\"fit_traceback.csv\"))\n",
