MAINT: limit dependencies in Binder environment (#8)
* DX: automatically update pip constraints and pre-commit
* DX: git-ignore temporary Conda requirements files
* DX: remove new metadata for `nbstripout`
* DX: remove VSCode extension for JSON sorting
* ENH: define separate requirements for Binder
* MAINT: pin requirements with `pip` constraint files
* MAINT: remove Jupyter Lab dependencies from Binder environment
  `jupyterlab-code-formatter` apparently does not work in Binder.
* MAINT: update Python version in Jupyter kernels
* MAINT: use `black`'s default line width 88

---------

Co-authored-by: GitHub <noreply@github.com>

--- a/2021.11.29/ampform.ipynb
+++ b/2021.11.29/ampform.ipynb
@@ -61,10 +61,7 @@
     "    create_analytic_breit_wigner,\n",
     "    create_relativistic_breit_wigner_with_ff,\n",
     ")\n",
-    "from ampform.dynamics.kmatrix import (\n",
-    "    NonRelativisticKMatrix,\n",
-    "    RelativisticKMatrix,\n",
-    ")\n",
+    "from ampform.dynamics.kmatrix import NonRelativisticKMatrix, RelativisticKMatrix\n",
     "from IPython.display import Math, display\n",
     "from sympy.physics.quantum.spin import WignerD"
    ]
@@ -139,9 +136,7 @@
    },
    "outputs": [],
    "source": [
-    "dot = qrules.io.asdot(\n",
-    "    reaction, collapse_graphs=True, render_final_state_id=True\n",
-    ")\n",
+    "dot = qrules.io.asdot(reaction, collapse_graphs=True, render_final_state_id=True)\n",
     "graphviz.Source(dot)"
    ]
   },
@@ -296,7 +291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
