MAINT: apply Ruff formatting

--- a/2021.12.13/tensorwaves-caching.ipynb
+++ b/2021.12.13/tensorwaves-caching.ipynb
@@ -383,12 +383,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimized_expression = optimized_expression.subs(\n",
-    "    {\n",
-    "        sp.Symbol(f\"m_{i}\", real=True): particle.mass\n",
-    "        for i, particle in reaction.final_state.items()\n",
-    "    }\n",
-    ")\n",
+    "optimized_expression = optimized_expression.subs({\n",
+    "    sp.Symbol(f\"m_{i}\", real=True): particle.mass\n",
+    "    for i, particle in reaction.final_state.items()\n",
+    "})\n",
     "sp.count_ops(optimized_expression)"
    ]
   },
