MAINT: address Ruff issues

--- a/2021.12.13/ampform.ipynb
+++ b/2021.12.13/ampform.ipynb
@@ -457,7 +457,7 @@
    "source": [
     "expr_subs = expr.subs(mass_substitutions)\n",
     "expr_subs = round_nested(expr_subs, n_decimals=2)\n",
-    "node = [s for s in sp.preorder_traversal(expr_subs) if isinstance(s, sp.Float)][0]\n",
+    "node = next(s for s in sp.preorder_traversal(expr_subs) if isinstance(s, sp.Float))\n",
     "dot = sp.dotprint(expr_subs.subs(node, Symbol(f\"{node}\")), **graph_style)\n",
     "display(expr_subs.subs(node, sp.Symbol(Rf\"\\color{{RoyalBlue}}{node}\")))\n",
     "graphviz.Source(dot)"
