--- a/2021.12.13/tensorwaves-caching.ipynb
+++ b/2021.12.13/tensorwaves-caching.ipynb
@@ -57,7 +57,7 @@
     "\n",
     "import ampform\n",
     "import graphviz\n",
-    "import matplotlib\n",
+    "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import qrules\n",
@@ -85,7 +85,7 @@
     "tf.get_logger().setLevel(\"WARNING\")\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
-    "matplotlib.rcParams.update({\"font.size\": 14})\n",
+    "mpl.rcParams.update({\"font.size\": 14})\n",
     "np_config.enable_numpy_behavior()\n",
     "\n",
     "has_tf_gpu = bool(tf.config.list_physical_devices(\"GPU\"))\n",
@@ -481,7 +481,7 @@
     "    cached_expression = cached_expressions[0]\n",
     "    cse_dict = dict(cse)\n",
     "    cse_symbols = set(cse_dict)\n",
-    "    while any([bool(expr.free_symbols & cse_symbols) for expr in cse_dict.values()]):\n",
+    "    while any(bool(expr.free_symbols & cse_symbols) for expr in cse_dict.values()):\n",
     "        cse_dict = {\n",
     "            symbol: expr.xreplace(cse_dict) for symbol, expr in cse_dict.items()\n",
     "        }\n",
