--- a/2021.11.29/tensorwaves-0.3.4.ipynb
+++ b/2021.11.29/tensorwaves-0.3.4.ipynb
@@ -55,7 +55,7 @@
     "\n",
     "import ampform\n",
     "import graphviz\n",
-    "import matplotlib\n",
+    "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import qrules\n",
@@ -77,7 +77,7 @@
     "tf.get_logger().setLevel(\"WARNING\")\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
-    "matplotlib.rcParams.update({\"font.size\": 14})\n",
+    "mpl.rcParams.update({\"font.size\": 14})\n",
     "np_config.enable_numpy_behavior()\n",
     "\n",
     "has_tf_gpu = bool(tf.config.list_physical_devices(\"GPU\"))\n",
