ENH: install notebook dependencies with `uv`

--- a/2021.11.29/qrules.ipynb
+++ b/2021.11.29/qrules.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install -q qrules[viz]==0.9.*"
+    "!uv pip install -q 'qrules[viz]==0.9.*'"
    ]
   },
   {
@@ -121,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
