--- a/2021.11.29/ampform.ipynb
+++ b/2021.11.29/ampform.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install -q ampform[viz]==0.11.*"
+    "!uv pip install -q 'ampform[viz]==0.11.*'"
    ]
   },
   {
@@ -283,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
