MAINT: install `matplotlib` in notebook

--- a/2021.11.29/tensorwaves.ipynb
+++ b/2021.11.29/tensorwaves.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!uv pip install -q 'ampform[viz]==0.11.*' 'tensorwaves[jax]==0.3.7'"
+    "!uv pip install -q 'ampform[viz]==0.11.*' 'tensorwaves[jax]==0.3.7' matplotlib"
    ]
   },
   {
