--- a/2021.12.13/tensorwaves.ipynb
+++ b/2021.12.13/tensorwaves.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!uv pip install -q 'ampform[viz]==0.12.*' 'tensorwaves[jax,pwa]==0.4.*'"
+    "!uv pip install -q 'ampform[viz]==0.12.*' 'tensorwaves[jax,pwa]==0.4.*' matplotlib"
    ]
   },
   {
