FIX: fix dependency conflicts

--- a/2021.11.29/tensorwaves.ipynb
+++ b/2021.11.29/tensorwaves.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!uv pip install -q 'ampform[viz]==0.11.*' 'tensorwaves[jax]==0.3.7' matplotlib"
+    "!pip install -q 'ampform[viz]==0.11.*' 'iminuit==2.19.*' 'pillow==8.*' 'tensorwaves[jax]==0.3.4' 'tensorflow==2.7.*' matplotlib"
    ]
   },
   {
@@ -127,7 +127,6 @@
     "    phsp = np.array(phsp_set[variable_name])\n",
     "    intensities = np.array(intensity_model(phsp_set))\n",
     "    _, ax = plt.subplots(figsize=(9, 4))\n",
-    "    ax = plt.gca()\n",
     "    ax.hist(\n",
     "        data,\n",
     "        bins=bins,\n",
@@ -248,6 +247,7 @@
     "template = SympyModel(\n",
     "    expression=model.expression.doit(),\n",
     "    parameters=model.parameter_defaults,\n",
+    "    max_complexity=200,\n",
     ")\n",
     "intensity = LambdifiedFunction(template, backend=\"jax\")\n",
     "data_converter = HelicityTransformer(model.adapter)\n",
@@ -336,7 +336,7 @@
    "metadata": {},
    "source": [
     "_Time estimate:_<br>\n",
-    "For this (deterministic) data sample and these initial parameter values, the fit requires **515 iterations** (GPU; 516 on CPU). On Google Colab, this should take **around 20 seconds** with GPU."
+    "For this (deterministic) data sample and these initial parameter values, the fit requires **515 iterations** (GPU; 516 on CPU). On Google Colab, this should take **around 45 seconds** with GPU."
    ]
   },
   {
