--- a/2021.11.29/tensorwaves.ipynb
+++ b/2021.11.29/tensorwaves.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install -q ampform[viz]==0.11.* tensorwaves[jax]==0.3.7"
+    "!uv pip install -q 'ampform[viz]==0.12.*' 'tensorwaves[jax,pwa]==0.4.*' 'tensorflow==2.12.*' matplotlib"
    ]
   },
   {
@@ -65,10 +65,15 @@
     "from jax.lib import xla_bridge\n",
     "from matplotlib import cm\n",
     "from tensorflow.python.ops.numpy_ops import np_config\n",
-    "from tensorwaves.data import TFUniformRealNumberGenerator, generate_data, generate_phsp\n",
-    "from tensorwaves.data.transform import HelicityTransformer\n",
+    "from tensorwaves.data import (\n",
+    "    IntensityDistributionGenerator,\n",
+    "    TFPhaseSpaceGenerator,\n",
+    "    TFUniformRealNumberGenerator,\n",
+    "    TFWeightedPhaseSpaceGenerator,\n",
+    ")\n",
+    "from tensorwaves.data.transform import SympyDataTransformer\n",
     "from tensorwaves.estimator import UnbinnedNLL\n",
-    "from tensorwaves.model import LambdifiedFunction, SympyModel\n",
+    "from tensorwaves.function.sympy import create_parametrized_function\n",
     "from tensorwaves.optimizer.callbacks import CSVSummary\n",
     "from tensorwaves.optimizer.minuit import Minuit2\n",
     "\n",
@@ -104,7 +109,7 @@
    "outputs": [],
    "source": [
     "def indicate_masses():\n",
-    "    reaction_info = model.adapter.reaction_info\n",
+    "    reaction_info = model.reaction_info\n",
     "    resonances = sorted(\n",
     "        reaction_info.get_intermediate_particles(),\n",
     "        key=lambda p: p.mass,\n",
@@ -127,7 +132,6 @@
     "    phsp = np.array(phsp_set[variable_name])\n",
     "    intensities = np.array(intensity_model(phsp_set))\n",
     "    _, ax = plt.subplots(figsize=(9, 4))\n",
-    "    ax = plt.gca()\n",
     "    ax.hist(\n",
     "        data,\n",
     "        bins=bins,\n",
@@ -245,32 +249,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "template = SympyModel(\n",
-    "    expression=model.expression.doit(),\n",
-    "    parameters=model.parameter_defaults,\n",
+    "expression = model.expression.doit()\n",
+    "parameter_defaults = model.parameter_defaults\n",
+    "intensity = create_parametrized_function(expression, parameter_defaults, backend=\"jax\")\n",
+    "helicity_transformer = SympyDataTransformer.from_sympy(\n",
+    "    model.kinematic_variables, backend=\"jax\"\n",
     ")\n",
-    "intensity = LambdifiedFunction(template, backend=\"jax\")\n",
-    "data_converter = HelicityTransformer(model.adapter)\n",
-    "reaction_info = model.adapter.reaction_info\n",
+    "reaction_info = model.reaction_info\n",
     "initial_state_mass = reaction_info.initial_state[-1].mass\n",
     "final_state_masses = {i: p.mass for i, p in reaction_info.final_state.items()}\n",
     "rng = TFUniformRealNumberGenerator(seed=0)\n",
-    "phsp_sample = generate_phsp(\n",
-    "    size=1_000_000,\n",
-    "    initial_state_mass=initial_state_mass,\n",
-    "    final_state_masses=final_state_masses,\n",
-    "    random_generator=rng,\n",
+    "\n",
+    "phsp_generator = TFPhaseSpaceGenerator(initial_state_mass, final_state_masses)\n",
+    "phsp_momenta = phsp_generator.generate(1_000_000, rng)\n",
+    "phsp = helicity_transformer(phsp_momenta)\n",
+    "\n",
+    "data_generator = IntensityDistributionGenerator(\n",
+    "    function=intensity,\n",
+    "    domain_generator=TFWeightedPhaseSpaceGenerator(\n",
+    "        initial_state_mass, final_state_masses\n",
+    "    ),\n",
+    "    domain_transformer=helicity_transformer,\n",
     ")\n",
-    "data_sample = generate_data(\n",
-    "    size=100_000,\n",
-    "    initial_state_mass=initial_state_mass,\n",
-    "    final_state_masses=final_state_masses,\n",
-    "    data_transformer=data_converter,\n",
-    "    intensity=intensity,\n",
-    "    random_generator=rng,\n",
-    ")\n",
-    "data = data_converter.transform(data_sample)\n",
-    "phsp = data_converter.transform(phsp_sample)"
+    "data_momenta = data_generator.generate(100_000, rng)\n",
+    "data = helicity_transformer(data_momenta)"
    ]
   },
   {
@@ -288,7 +290,8 @@
     "ax.hist(np.array(phsp[\"m_12\"]), density=True, bins=100, alpha=0.5, label=\"phsp\")\n",
     "ax.set_xlabel(R\"$m_{\\pi^0\\pi^0}$\")\n",
     "ax.set_yticks([])\n",
-    "plt.legend();"
+    "plt.legend()\n",
+    "plt.show()"
    ]
   },
   {
@@ -314,6 +317,7 @@
     "    \"Gamma_f(0)(980)\": 0.1,\n",
     "    \"Gamma_f(0)(1710)\": 0.3,\n",
     "}\n",
+    "original_parameters = intensity.parameters\n",
     "intensity.update_parameters(initial_parameters)\n",
     "compare_model(\"m_12\", data, phsp, intensity, bins=200)"
    ]
@@ -324,7 +328,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "function = LambdifiedFunction(template, backend=\"jax\")\n",
+    "function = create_parametrized_function(expression, parameter_defaults, backend=\"jax\")\n",
     "estimator = UnbinnedNLL(function, data, phsp, backend=\"jax\")\n",
     "optimizer = Minuit2(callback=CSVSummary(\"fit_traceback.csv\"))\n",
     "fit_result = optimizer.optimize(estimator, initial_parameters)\n",
@@ -336,7 +340,7 @@
    "metadata": {},
    "source": [
     "_Time estimate:_<br>\n",
-    "For this (deterministic) data sample and these initial parameter values, the fit requires **515 iterations** (GPU; 516 on CPU). On Google Colab, this should take **around 20 seconds** with GPU."
+    "For this (deterministic) data sample and these initial parameter values, the fit requires **515 iterations** (GPU; 516 on CPU). On Google Colab, this should take **around 45 seconds** with GPU."
    ]
   },
   {
@@ -395,7 +399,7 @@
     "    label = line.get_label()\n",
     "    color = line.get_color()\n",
     "    ax2.axhline(\n",
-    "        y=template.parameters[par],\n",
+    "        y=original_parameters[par],\n",
     "        color=color,\n",
     "        alpha=0.5,\n",
     "        linestyle=\"dotted\",\n",
@@ -423,7 +427,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
