--- a/2021.12.13/tensorwaves.ipynb
+++ b/2021.12.13/tensorwaves.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install -q ampform[viz]==0.12.* tensorwaves[jax,pwa]==0.4.*"
+    "!uv pip install -q 'ampform[viz]==0.12.*' 'tensorwaves[jax,pwa]==0.4.*' 'tensorflow==2.12.*' matplotlib"
    ]
   },
   {
@@ -438,7 +438,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
